<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/log_out2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="148dp" />

    <TextView
        android:id="@+id/page2"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/page2"
        android:textColorLink="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="97dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/log_out2"
        android:layout_marginTop="113dp"
        android:text="@string/us"
        android:textSize="18sp" />


</RelativeLayout>