<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf4f7">


    <EditText
        android:id="@+id/rpass1"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible" />

    <EditText
        android:id="@+id/rpass2"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/register" />

    <EditText
        android:id="@+id/rusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:hint="@string/username"
        android:ems="10"
        android:inputType="textPersonName" />
</RelativeLayout>